--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,14 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+# Build output
+*.o
+/src/poschengband
+/poschengband
+
+# Temporary (cache) files built during run-time
+*.raw
+
+# Save files
+lib/save
