Ignore pref files, savefiles ini files and raw files generated by PosChengband

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 #################
+## Angband
+#################
+*.raw
+*.ini
+lib/save/*
+lib/user/*.prf
+
+#################
 ## Eclipse
 #################
 
