--- a/src/Poschengband.vcxproj.filters
+++ b/src/Poschengband.vcxproj.filters
@@ -540,6 +540,9 @@
     <ClCompile Include="race_golem.c">
       <Filter>Player\Races</Filter>
     </ClCompile>
+    <ClCompile Include="race_quylthulg.c">
+      <Filter>Player\Races</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="angband.h">
