The Possessor: Paranoid Early Commit

--- a/src/makefile.linux
+++ b/src/makefile.linux
@@ -55,7 +55,7 @@ SRCS = \
 	mut_a.c mystic.c necromancer.c ninja.c object1.c object2.c object3.c obj_kind.c paladin.c \
 	priest.c psion.c races.c races_a.c races_k.c races_mimic.c race_angel.c \
 	race_beholder.c race_demon.c race_dragon.c race_elemental.c race_giant.c race_golem.c \
-	race_hound.c race_hydra.c race_jelly.c race_leprechaun.c race_lich.c race_quylthulg.c race_spider.c \
+	race_hound.c race_hydra.c race_jelly.c race_leprechaun.c race_lich.c race_possessor.c race_quylthulg.c race_spider.c \
 	race_sword.c race_troll.c race_xorn.c racial.c rage-mage.c ranger.c red_mage.c \
 	resist.c rogue.c rooms.c rune_knight.c samurai.c save.c savefile.c scores.c scout.c \
 	skills.c sniper.c sorcerer.c spells.c spells1.c spells2.c spells3.c spells_a.c \
@@ -77,7 +77,7 @@ OBJS = \
 	mut_a.o mystic.o necromancer.o ninja.o object1.o object2.o object3.o obj_kind.o paladin.o \
 	priest.o psion.o races.o races_a.o races_k.o races_mimic.o race_angel.o \
 	race_beholder.o race_demon.o race_dragon.o race_elemental.o race_giant.o race_golem.o \
-	race_hound.o race_hydra.o race_jelly.o race_leprechaun.o race_lich.o race_quylthulg.o race_spider.o \
+	race_hound.o race_hydra.o race_jelly.o race_leprechaun.o race_lich.o race_possessor.o race_quylthulg.o race_spider.o \
 	race_sword.o race_troll.o race_xorn.o racial.o rage-mage.o ranger.o red_mage.o \
 	resist.o rogue.o rooms.o rune_knight.o samurai.o save.o savefile.o scores.o scout.o \
 	skills.o sniper.o sorcerer.o spells.o spells1.o spells2.o spells3.o spells_a.o \
@@ -389,6 +389,7 @@ race_hydra.o: race_hydra.c $(INCS)
 race_jelly.o: race_jelly.c $(INCS)
 race_leprechaun.o: race_leprechaun.c $(INCS)
 race_lich.o: race_lich.c $(INCS)
+race_possessor.o: race_possessor.c $(INCS)
 race_quylthulg.o: race_quylthulg.c $(INCS)
 race_spider.o: race_spider.c $(INCS)
 race_sword.o: race_sword.c $(INCS)
