--- a/src/Poschengband.vcxproj.filters
+++ b/src/Poschengband.vcxproj.filters
@@ -543,6 +543,9 @@
     <ClCompile Include="race_quylthulg.c">
       <Filter>Player\Races</Filter>
     </ClCompile>
+    <ClCompile Include="race_possessor.c">
+      <Filter>Player\Races</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="angband.h">
@@ -1133,6 +1136,9 @@
     </None>
     <None Include="..\lib\file\rumors.txt">
       <Filter>Edit\Files</Filter>
+    </None>
+    <None Include="..\lib\edit\b_info.txt">
+      <Filter>Edit\Stuff</Filter>
     </None>
   </ItemGroup>
 </Project>
