--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -25,7 +25,7 @@ GCUMAINFILES = main-gcu.o
 
 # OSXMAINFILES = main-crb.o
 
-# SDLMAINFILES = main-sdl.o
+SDLMAINFILES = main-sdl.o
 
 # SNDSDLFILES = snd-sdl.o
 
