--- a/src/Makefile
+++ b/src/Makefile
@@ -4,12 +4,11 @@ include $(MKPATH)buildsys.mk
 # import source list
 include Makefile.src
 INCLUDE = $(HDRS)
-OBJECTS = $(ANGFILES)
+OBJECTS = $(ANGFILES) $(ZFILES)
 SRCS    = ${OBJECTS:.o=.c} ${MAINFILES:.o=.c}
 PROG    = poschengband$(PROG_SUFFIX)
 # VERSION := $(shell ../scripts/version.sh)
-# CFLAGS += -DBUILD_ID=${VERSION} -I. -std=c99 -Wdeclaration-after-statement -O0
-CFLAGS += -I. -std=c99 -Wdeclaration-after-statement -O0
+CFLAGS += -DBUILD_ID=${VERSION} -I. -std=c99 -Wdeclaration-after-statement -O0
 
 CLEAN = poschengband.o $(OBJECTS) win/poschengband.res
 DISTCLEAN = autoconf.h
