--- a/src/Poschengband.vcxproj
+++ b/src/Poschengband.vcxproj
@@ -464,8 +464,8 @@
     <None Include="..\lib\pref\xtra-gcu.prf" />
     <None Include="..\lib\pref\xtra-new.prf" />
     <None Include="..\lib\pref\xtra-xxx.prf" />
+    <None Include="..\readme.txt" />
     <None Include="Makefile.inc" />
-    <None Include="makefile.linux" />
     <None Include="Makefile.osx" />
     <None Include="Makefile.src" />
   </ItemGroup>
