--- a/src/Poschengband.vcxproj.filters
+++ b/src/Poschengband.vcxproj.filters
@@ -1125,9 +1125,6 @@
     <None Include="..\lib\file\ring_med.txt">
       <Filter>Edit\Files</Filter>
     </None>
-    <None Include="makefile.linux">
-      <Filter>Edit\Other Makefiles</Filter>
-    </None>
     <None Include="..\lib\help\MonsterRaces.txt">
       <Filter>Edit\Help</Filter>
     </None>
@@ -1148,6 +1145,9 @@
     </None>
     <None Include="Makefile.src">
       <Filter>Edit\Other Makefiles</Filter>
+    </None>
+    <None Include="..\readme.txt">
+      <Filter>Edit</Filter>
     </None>
   </ItemGroup>
 </Project>
