--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -43,7 +43,7 @@ ANGFILES = \
 	priest.o psion.o races.o races_a.o races_k.o races_mimic.o race_angel.o \
 	race_beholder.o race_centipede.o race_demon.o race_dragon.o race_elemental.o race_ghost.o race_giant.o race_golem.o \
 	race_hound.o race_hydra.o race_jelly.o race_leprechaun.o race_lich.o race_possessor.o race_quylthulg.o race_spider.o \
-	race_sword.o race_troll.o race_vampire.o race_xorn.o race_zombie.o racial.o rage-mage.o ranger.o red_mage.o \
+	race_ring.o race_sword.o race_troll.o race_vampire.o race_xorn.o race_zombie.o racial.o rage-mage.o ranger.o red_mage.o \
 	resist.o rogue.o rooms.o rune_knight.o samurai.o save.o savefile.o scores.o scout.o \
 	skills.o sniper.o sorcerer.o spells.o spells1.o spells2.o spells3.o spells_a.o \
 	spells_c.o spells_h.o spells_m.o spells_s.o spoilers.o store.o streams.o \
