--- a/src/Poschengband.vcxproj.filters
+++ b/src/Poschengband.vcxproj.filters
@@ -558,6 +558,9 @@
     <ClCompile Include="race_zombie.c">
       <Filter>Player\Races</Filter>
     </ClCompile>
+    <ClCompile Include="race_ring.c">
+      <Filter>Player\Races</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="angband.h">
@@ -1163,6 +1166,9 @@
     </None>
     <None Include="..\readme.txt">
       <Filter>Edit</Filter>
+    </None>
+    <None Include="..\lib\help\rings.txt">
+      <Filter>Edit\Help</Filter>
     </None>
   </ItemGroup>
 </Project>
