--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_INIT(PosChengband, 2.0.1, bugs@rephial.org)
+AC_INIT(PosChengband, 3.4.4, https://github.com/poschengband/poschengband/issues)
 AC_CONFIG_SRCDIR(src)
 
 AC_CANONICAL_HOST
