--- a/src/Makefile
+++ b/src/Makefile
@@ -8,8 +8,7 @@ OBJECTS = $(ANGFILES) $(ZFILES)
 SRCS    = ${OBJECTS:.o=.c} ${MAINFILES:.o=.c}
 PROG    = poschengband$(PROG_SUFFIX)
 # VERSION := $(shell ../scripts/version.sh)
-CFLAGS += -DBUILD_ID=${VERSION} -I. -std=c99 -Wdeclaration-after-statement -O0 -fno-omit-frame-pointer -fsanitize=undefined -fsanitize=address
-LDFLAGS += -fsanitize=undefined -fsanitize=address
+CFLAGS += -DBUILD_ID=${VERSION} -I. -std=c99 -Wdeclaration-after-statement -fno-omit-frame-pointer
 
 CLEAN = poschengband.o $(OBJECTS) win/poschengband.res
 DISTCLEAN = autoconf.h
